--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,18 @@
 {
-    "builds": [{
-        "src": "associationnas/wsgi.py",
-        "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
-    }],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "associationnas/wsgi.py"
-        }
-    ]
+  "builds": [
+    {
+      "src": "associationnas/",
+      "use": "@vercel/python",
+      "config": {
+        "maxLambdaSize": "15mb",
+        "runtime": "python3.9"
+      }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "associationnas/wsgi.py"
+    }
+  ]
 }
-
