--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,11 @@
     }
   ],
   "routes": [
+    { "handle": "filesystem" },
+    {
+      "src": "/api/(.*)",
+      "dest": "associationnas/wsgi.py"
+    },
     {
       "src": "/(.*)",
       "dest": "associationnas/wsgi.py"
